<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">MoneyControl</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <!--<string name="action_sign_in">Войти с помощою Google</string>-->
    <!--<string name="action_sign_in_short">Войти</string>-->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="titleCost">Расходы</string>
    <string name="titleIncome">Доходы</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Настройки</string>
    <string name="balanceString">Баланс</string>
    <string name="incomeString">Доход</string>
    <string name="costString">Расход</string>
    <string name="zeroCostString">0 грн.</string>
    <string name="CategoryString">Категория</string>
    <string name="monthBalanceString">За месяц</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="commonBalanceString">Общий</string>
    <string name="photoString">Фото</string>
    <string name="sumString">Сумма</string>
    <string name="dateString">Дата</string>
    <string name="descriptionString">Описание</string>


    <string name="title_crossfade">Simple Crossfade</string>
    <string name="title_card_flip">Card Flip</string>
    <string name="title_screen_slide">Screen Slide</string>
    <string name="title_zoom">Zoom</string>
    <string name="title_layout_changes">Layout Changes</string>
    <string name="title_template_step">Step <xliff:g id="step_number">%1$d</xliff:g>: Lorem
        Ipsum</string>

    <!-- Actions -->
    <string name="action_toggle">Toggle indicator</string>
    <string name="action_add_item">Add item</string>
    <string name="action_remove_item">Remove item</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="action_info">Photo info</string>
    <string name="action_photo">View photo</string>

    <!-- Messages -->
    <string name="message_empty_layout_changes">Add an item above to get started.</string>
    <string name="message_zoom_touch_expand">Touch a photo to expand it.</string>

    <!-- Accessibility-only descriptions -->
    <string name="description_image_1">Image 1</string>
    <string name="description_image_2">Image 2</string>
    <string name="description_zoom_touch_close">Expanded image (touch to close)</string>

    <!-- Other strings -->
    <string name="card_back_title">Angry Red Android</string>
    <string name="card_back_description"><![CDATA[Lorem ipsum dolor sit]]></string>
    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>
    <string name="addText">Добавить</string>
    <string name="deleteString">Удалить</string>

    <string name="addNewCashTransactionString">Добавить</string>
    <string name="backString">Назад</string>
    <string name="signed_in_fmt">Successfull</string>
    <string name="registerString">Eще нет аккаунта? Зарегестрируйтесь!</string>
    <string name="googleSignIn">Войти с помощью Google</string>
    <string name="signInShort">Войти</string>
    <string name="loginFailed">Неверный логин или пароль!</string>
    <string name="recordWasAdded">Сохранено</string>
    <string name="helloText">Добро пожаловать! Все инструкции по использованию приложения вы можете найти в меню слева.</string>
    <string name="exitString">Выйти</string>
</resources>
