<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.tanyaohotnik.moneycontrol.activities.LoginActivity"
              android:background="@color/colorLoginBackground"
              android:descendantFocusability="beforeDescendants"
              android:focusableInTouchMode="true">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/white"
        android:fontFamily="cursive"
        android:textStyle="normal|bold"
        android:textAllCaps="false"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/signInShort"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"/>

            </android.support.design.widget.TextInputLayout>

            <!--<Button-->
                <!--android:id="@+id/email_sign_in_button"-->
                <!--style="?android:textAppearanceSmall"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="16dp"-->
                <!--android:text="@string/action_sign_in"-->
                <!--android:textStyle="bold" />-->
            <!--<com.google.android.gms.common.SignInButton-->
                <!--android:id="@+id/sign_in_button"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content" >-->

            <!--</com.google.android.gms.common.SignInButton>-->
            <Button
                android:text="@string/signInShort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signInButton"
                android:layout_weight="1"
                android:onClick="onSignInButtonClick"
                style="@style/Widget.AppCompat.Button"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
            <Button
                android:text="@string/googleSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/googleSignInButton"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/google_logo"
                style="@style/Widget.AppCompat.Button"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"

                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:text="@string/registerString"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
