<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tanyaohotnik.moneycontrol.fragments.DetailFragment"
    android:background="@color/colorBackground">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detailContentLayout"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/photoString"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/textView"
                android:layout_weight="0.5"
                android:gravity="center"
                android:textStyle="normal|bold"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textAlignment="textStart"
                android:paddingLeft="16dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/detailPhotoImageView"
                android:layout_weight="0.5"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp">

            <TextView
                android:text="@string/sumString"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/textView2"
                android:layout_weight="0.5"
                android:gravity="center"
                android:textStyle="normal|bold"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textAlignment="textStart"
                android:paddingLeft="16dp"/>

            <TextView
                android:text="@string/zeroCostString"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:textStyle="normal|bold"
                android:textAllCaps="false"
                android:textAlignment="textStart"
                android:id="@+id/detailSumTextView"
                android:gravity="center"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp">

            <TextView
                android:text="@string/dateString"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/textView3"
                android:layout_weight="0.5"
                android:gravity="center"
                android:textStyle="normal|bold"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textAlignment="textStart"
                android:paddingLeft="16dp"/>

            <TextView
                android:text="Date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:textStyle="normal|bold"
                android:textAllCaps="false"
                android:textAlignment="textStart"
                android:id="@+id/detailDateTextView"
                android:gravity="center"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp">

            <TextView
                android:text="@string/descriptionString"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/textView4"
                android:layout_weight="0.4"
                android:gravity="center"
                android:textStyle="normal|bold"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textAlignment="textStart"
                android:paddingLeft="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:textStyle="normal|bold"
                android:textAllCaps="false"
                android:textAlignment="center"
                android:id="@+id/detailDescriptionTextView"
                android:gravity="center"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detailButtonLayout"
        android:layout_alignParentBottom="true">

        <Button
            android:text="@string/deleteString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deleteCashTransactionButton"
            android:layout_weight="0"
            />
    </LinearLayout>

</RelativeLayout>
