<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/fragment_statistic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.tanyaohotnik.moneycontrol.fragments.StatisticFragment"
                android:background="@color/colorBackground"
                android:minHeight="50dp"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
    >

    <!--<FrameLayout-->
        <!--android:orientation="vertical"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:minHeight="40dp"-->
        <!--android:id="@+id/fragmentDateContainer">-->
    <!--</FrameLayout>-->
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="40dp"
                  android:background="@color/colorBackground"
                  android:orientation="horizontal"
                  android:id="@+id/dateLayout"
        >

        <Button
            android:id="@+id/prevDateButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@color/colorBackground"
            android:drawableLeft="@mipmap/back"
            android:paddingLeft="10dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            />

        <TextView
            android:id="@+id/monthYearStatisticTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="Date"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="normal|bold"/>

        <Button
            android:id="@+id/nextDateButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:adjustViewBounds="false"
            android:background="@color/colorBackground"
            android:cropToPadding="false"
            android:drawablePadding="20dp"
            android:drawableRight="@mipmap/next"
            android:paddingRight="10dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            />

    </LinearLayout>

    <TextView
        android:text="@string/balanceString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/balanceTextView"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textSize="20sp"
        android:textColor="@color/colorTitle"
        android:textAllCaps="true"
        android:layout_below="@+id/dateLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/monthBalanceString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/monthBalanceTextView"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="normal|bold"
            android:textSize="16sp"/>

        <TextView
            android:text="@string/zeroCostString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/monthBalanceAmountTextView"
            android:layout_weight="1"
            android:textStyle="normal|bold"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="120dp">

        <TextView
            android:text="@string/commonBalanceString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/commonBalanceTextView"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="normal|bold"
            android:textSize="16sp"
            />

        <TextView
            android:text="@string/zeroCostString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/commonBalanceAmountTextView"
            android:layout_weight="1"
            android:textStyle="normal|bold"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="16sp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/categoriesTableLayout"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
