<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                tools:context="com.tanyaohotnik.moneycontrol.fragments.MainFragment"
                android:background="@color/colorBackground"
                android:minHeight="50dp"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                android:paddingBottom="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainBalanceLinearLayout">

        <TextView
            android:text="@string/balanceString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/balanceTextView"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textSize="20sp"
            android:textColor="@color/colorTitle"
            android:textAllCaps="true"/>

        <TextView
            android:text="@string/zeroCostString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/balanceSumTextView"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/colorTitle"
           />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/costIncomeLayout">

        <TextView
            android:text="@string/zeroCostString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/costTextView"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="normal|bold"
            android:textSize="18sp"/>

        <TextView
            android:text="@string/zeroCostString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/incomeTextView"
            android:layout_weight="1"
            android:textColor="@android:color/holo_green_dark"
            android:textStyle="normal|bold"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textSize="18sp"
           />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/costIncomeLayout"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:id="@+id/cashTransactionRecyclerView"
        android:elevation="1dp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="false"
        android:layout_above="@+id/buttonLayout"
        android:padding="16dp"
        android:layout_marginBottom="16dp">

    </android.support.v7.widget.RecyclerView>
    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:background="@color/colorSeparator"-->
        <!--android:layout_above="@+id/buttonLayout"-->
        <!--android:layout_height="1dp"/>-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="0dp"
        android:id="@+id/buttonLayout">

        <!--<Button-->
            <!--android:text="@string/costString"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/costButton"-->
            <!--android:layout_weight="1"-->
            <!--android:textStyle="normal|bold"-->
            <!--android:textSize="16sp"-->
            <!--android:textColor="@color/colorRed"-->
            <!--android:background="@drawable/button"-->
            <!--android:layout_marginRight="10dp"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--android:onClick="onCostButtonClick"-->
            <!--style="@style/Widget.AppCompat.Button"/>-->


        <!--<Button-->
            <!--android:text="@string/incomeString"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/incomeButton"-->
            <!--android:layout_weight="1"-->
            <!--android:textSize="16sp"-->
            <!--android:background="@drawable/button"-->
            <!--android:textStyle="normal|bold"-->
            <!--android:textColor="@color/colorGreen"-->
            <!--android:onClick="onIncomeButtonClick"/>-->
        <Button
            android:text="@string/costString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/costButton"
            android:layout_weight="1"
            android:textStyle="normal|bold"
            android:textSize="16sp"
            android:textColor="@color/colorRed"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@color/colorBackground"/>
        <View android:layout_height="match_parent"
              android:background="@color/colorSeparator"
              android:layout_marginTop="10dp"
              android:layout_marginBottom="10dp"
              android:layout_width="1dp"/>
        <Button
            android:text="@string/incomeString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/incomeButton"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="normal|bold"
            android:textColor="@color/colorGreen"
            android:background="@color/colorBackground"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>

</RelativeLayout>
